--- a/HTML/sample1.html
+++ b/HTML/sample1.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<div id ="div1">
+    <head>
+        <title>My First HTML</title>
+        <style>
+        body{
+        background: grey;
+        }  
+        </style>
+        <link rel="stylesheet" href="./myStyles.css">
+        <script src= "script.js"></script>
+    </head>
+</div>
+<div id = "div2">
 <body>
-    <h2>Hello World</h2>
+    <h1 id="heading">Hello World</h1>
+    <h2 id="heading">Heading No 2</h2>
+    <h3 id="heading">Heading No 3</h3>
+    <h4 id="heading">Heading No 4</h4>
+    <h5 id="heading">Heading No 5</h5>
+    <h6 id="heading">Heading No 6</h6>
+    <p>Brindavanam is a 2010 Indian Telugu-language romantic action comedy film written and directed by Vamshi Paidipally. The film stars N. T. Rama Rao Jr., Kajal Aggarwal, and Samantha while Prakash Raj, Srihari, Kota Srinivasa Rao, Mukesh Rishi, Ajay, Tanikella Bharani, and Brahmanandam playing pivotal roles. The film was produced by Dil Raju's Sri Venkateswara Creations. S. Thaman composed the music with cinematography by Chota K. Naidu, dialogues by Koratala Siva, and editing by Marthand K. Venkatesh.</p>
+    
+    
+    <img src="./images/ntr.jpg" alt="image"><br>
+    <a href="https://www.voot.com/movie/the-super-khiladi/552705?utm_source=google_web&utm_medium=watchaction" target="_blank">Watch On Voot</a>
+
+    <ul>
+        <!--<ul typr ="circle"> -->
+         <!--<ul typr ="circle"> -->
+        <li>list1</li>
+        <li>list2</li>
+        <li>list3</li>
+        <li>list4</li>
+    </ul>
+    <ol>
+        <!-- <ol typr = "I">-->
+        <li>list1</li>
+        <li>list2</li>
+        <li>list3</li>
+        <li>list4</li>
+    </ol>
+    <hr>
+
+    <dl>
+        <dt>cofee</dt>
+        <dd>narendra</dd>
+    </dl>
+    <div id = "div3">
+        <table border="1px">
+            <thead>
+                    <tr>
+                        <th>Student Name</th>
+                        <th>Student Mail</th>
+                        <th>Student Address</th>
+                        <th>Student Contact</th>
+                    </tr>
+            </thead>
+            <tbody>
+                <tr>Narendra</tr>
+                <tr>narendrajammula22@gmail.com</tr>
+                <tr>guntur</tr>
+                <tr>22222222 </tr>
+            </tbody>
+        </table>
+    </div>
+
+
 </body>
+</div>
 </html>
