--- a/HTML/sample1.html
+++ b/HTML/sample1.html
@@ -58,10 +58,22 @@
                     </tr>
             </thead>
             <tbody>
-                <tr>Narendra</tr>
-                <tr>narendrajammula22@gmail.com</tr>
-                <tr>guntur</tr>
-                <tr>22222222 </tr>
+                <td>Narendra</td>
+                <td>narendrajammula22@gmail.com</td>
+                <td>guntur</td>
+                <td>22222222 </td>
+            </tbody>
+            <tbody>
+                <td>Narendra</td>
+                <td>narendrajammula22@gmail.com</td>
+                <td>guntur</td>
+                <td>22222222 </td>
+            </tbody>
+            <tbody>
+                <td>Narendra</td>
+                <td>narendrajammula22@gmail.com</td>
+                <td>guntur</td>
+                <td>22222222 </td>
             </tbody>
         </table>
     </div>
