--- a/HTML/sample2.html
+++ b/HTML/sample2.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h2>Hello World</h2>
-</body>
+<html>
+    <title>BASIC HTML</title>
+    <head>
+        <link rel="stylesheet" href="./style.css">
+    </head>>
+    <body>
+        <h1>Heading number 1</h1>
+        <h2>Heading number 2</h2>
+        <h3>Heading number 3</h3>
+        <h4>Heading number 4</h4>
+        <p>In this html page i am trying to learn basic html tags and basic css</p>
+    </body>
 </html>
