--- a/HTML/sample2.html
+++ b/HTML/sample2.html
@@ -1,7 +1,7 @@
 <html>
     <title>BASIC HTML</title>
     <head>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="style.css">
     </head>>
     <body>
         <h1>Heading number 1</h1>
@@ -9,5 +9,6 @@
         <h3>Heading number 3</h3>
         <h4>Heading number 4</h4>
         <p>In this html page i am trying to learn basic html tags and basic css</p>
+        <img src="/HTML/img.jpeg" alt="Image not displaying">
     </body>
 </html>
