--- a/HTML/sample2.html
+++ b/HTML/sample2.html
@@ -8,7 +8,7 @@
         <h2>Heading number 2</h2>
         <h3>Heading number 3</h3>
         <h4>Heading number 4</h4>
-        <p>In this html page i am trying to learn basic html tags and basic css</p>
+        <p><b>In this html page i am trying to learn basic html tags and basic css.HyperText Markup Language (HTML) is the set of markup symbols or codes inserted into a file intended for display on the Internet. The markup tells web browsers how to display a web page's words and images.</b></p>
         <img src="/HTML/img.jpeg" alt="Image not displaying">
     </body>
 </html>
