--- a/HTML/sample1.html
+++ b/HTML/sample1.html
@@ -20,6 +20,8 @@
     <h4 id="heading">Heading No 4</h4>
     <h5 id="heading">Heading No 5</h5>
     <h6 id="heading">Heading No 6</h6>
+    <h7 id="heading">Heading No 6</h7>
+
     <p>Brindavanam is a 2010 Indian Telugu-language romantic action comedy film written and directed by Vamshi Paidipally. The film stars N. T. Rama Rao Jr., Kajal Aggarwal, and Samantha while Prakash Raj, Srihari, Kota Srinivasa Rao, Mukesh Rishi, Ajay, Tanikella Bharani, and Brahmanandam playing pivotal roles. The film was produced by Dil Raju's Sri Venkateswara Creations. S. Thaman composed the music with cinematography by Chota K. Naidu, dialogues by Koratala Siva, and editing by Marthand K. Venkatesh.</p>
     
     
@@ -55,6 +57,7 @@
                         <th>Student Mail</th>
                         <th>Student Address</th>
                         <th>Student Contact</th>
+
                     </tr>
             </thead>
             <tbody>
