--- a/HTML/sample2_div.html
+++ b/HTML/sample2_div.html
@@ -16,12 +16,16 @@
                 width: 900px;
                 height: 400px;
                 border: 2px solid blue;
+                margin: 10px auto;
+                box-sizing: border-box;
             }
             #footer{
                 width: 900px;
                 height: 100px;
                 border: 1px solid green;
                 margin-top: 10px;
+                margin: 10px auto;
+                box-sizing: border-box;
 
             }
         </style>
