--- a/HTML/wireframe_assignment.html
+++ b/HTML/wireframe_assignment.html
@@ -87,6 +87,17 @@
                 border: 3px solid black;
                 display: inline;
             }
+            #div7{
+                width: 1250px;
+                height: 80px;
+                border: 3px solid black;
+                box-sizing: border-box;
+                margin-top: 900px;
+                margin-left: 20px;
+                font-size: 50px;
+                font-weight: bold;
+                text-align: center;
+            }
 
 
         </style>
@@ -115,6 +126,7 @@
             <div class = "d"id = "div6">
                 <h1>Box 4 heading</h1>
             </div>
+            <div id = "div7">Footer</div>
         </div>
     </body>
 </html>
