--- a/DAY3 ASSIGNMENT/template1.html
+++ b/DAY3 ASSIGNMENT/template1.html
@@ -1,5 +1,5 @@
 <html>
-    <title>TeMPLATE CREATION</title>
+    <title>TEMPLATE CREATION</title>
     <head>
         <style>
             #template{
