all changes were done perfectly

--- a/DAY3 ASSIGNMENT/template1.html
+++ b/DAY3 ASSIGNMENT/template1.html
@@ -1,11 +1,13 @@
 <html>
     <title>TEMPLATE CREATION</title>
     <head>
+        <link rel="stylesheet" href="style.css">
         <style>
             #template{
                 height:100%;
-                width:80%;
+                width:60%;
                 border:5px solid grey;
+               
             }
             #block1{
                 width: 700px;
@@ -70,6 +72,7 @@
                 text-align:right; 
                 bottom:0;
             }
+           
         </style>
     </head>
     <body>
