--- a/HTML/wifeframe/wireframe_assignment1.html
+++ b/HTML/wifeframe/wireframe_assignment1.html
@@ -131,7 +131,7 @@
                         <p id ="p4" class="p">App Tagline</p>
                     </div>
                     <div id = "img">
-                    <img id = "img" src = "./images/ntr.jpg"></div>
+                    <img id = "img" src = "../images/ntr.jpg"></div>
             </div>
             <div id = "box">
             <div class = "d"id="div3">
