--- a/HTML/sample4_div.html
+++ b/HTML/sample4_div.html
@@ -29,12 +29,18 @@
 </head>
 <body>
     <div id="header">
+        <header></header>
         <h2>I am From Header Section</h2>
     </div>
     <div id="content">
+    <section></section>
+    <article></article>
+    <nav></nav>
+    
         <h2>I am from Content Secion</h2>
     </div>
     <div id="footer">
+        <footer></footer>
         <h3>I am from Footer Section</h3>
     </div>
 </body>
