--- a/div-sample2/div.html
+++ b/div-sample2/div.html
@@ -13,7 +13,7 @@
 
                width:900px;
                border: 4px solid red;
-               margin:5px auto;
+               margin:20px auto;
                height: 100px;
                padding: 10px;    
            }
@@ -21,15 +21,15 @@
            #content{
                width:900px;
                border: 4px solid black;  /*border: thickness of the margin line*/
-               margin: 5px auto;     /*margin: it is used to make gaps between box and another box*/
+               margin:0 auto;     /*margin: it is used to make gaps between box and another box*/
                height: 400px;         /*size of the box*/
-               padding: 10px;
+               padding: 10px ;
                       
            }
             #footer{
                 width: 900px;
                 border: 4px solid blue;
-                margin: 5px auto;
+                margin: 20px auto;
                 height: 100px;
                 padding: 10px;
       
