--- a/DAY3 ASSIGNMENT/DAy4 assignment/tempalte1.html
+++ b/DAY3 ASSIGNMENT/DAy4 assignment/tempalte1.html
@@ -9,20 +9,24 @@
                         <h1><a href="#">Basic87</a></h1>
                         <h2>The web designing application</h2>
                     </div>
-                <div id="nav">
+                    <div id="nav">
                     <ul>
                         <li>TEST LINK1</li>
                         <li>TEST LINK2</li>
                         <li>TEST LINK3</li>
                         <li>TEST LINK4</li>
                     </ul>
-                </div>
+                    </div>
                 </div>
             </div>
-
-            <div id=""row1part2></div>
         </div>
-        <div id="row2">PART2</div>
+        <div id="row2" class="clear">
+            <div id="images">
+                <img src="" alt="image not displayed">
+                <img src="" alt="image not displayed">
+                <img src="" alt="image not displayed">
+                <img src="" alt="image not displayed">
+            </div>
         <div id="row3">PART3</div>
         <div id="row4">PART4</div>
     </body>
