--- a/DAY3 ASSIGNMENT/DAy4 assignment/tempalte1.html
+++ b/DAY3 ASSIGNMENT/DAy4 assignment/tempalte1.html
@@ -21,11 +21,10 @@
             </div>
         </div>
         <div id="row2" class="clear">
-            <div id="images">
-                <img src="" alt="image not displayed">
-                <img src="" alt="image not displayed">
-                <img src="" alt="image not displayed">
-                <img src="" alt="image not displayed">
+            <div class="image1"><img src="./image1.gif" alt="image not displayed"><p>enter caption</p></div>
+            <div class="image1"> <img src="./image1.gif" alt="image not displayed"><p>enter caption</p></div>
+            <div class="image1"><img src="./image1.gif" alt="image not displayed"><p>enter caption</p></div>
+             <div class="image1 last" ><img src="./image1.gif" alt="image not displayed"><p>enter caption</p></div>
             </div>
         <div id="row3">PART3</div>
         <div id="row4">PART4</div>
