--- a/DAY3 ASSIGNMENT/DAy4 assignment/tempalte1.html
+++ b/DAY3 ASSIGNMENT/DAy4 assignment/tempalte1.html
@@ -26,7 +26,24 @@
             <div class="image1"><img src="./image1.gif" alt="image not displayed"><p>enter caption</p></div>
              <div class="image1 last" ><img src="./image1.gif" alt="image not displayed"><p>enter caption</p></div>
             </div>
-        <div id="row3">PART3</div>
-        <div id="row4">PART4</div>
+        <div id="row3">
+            <p>
+                Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
+                Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. 
+                Namjusto cras urna urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.
+            </p>
+        </div>
+        <div id="row4">
+            <div id="category">
+                <h1 style="color: black;">CATRGORIES</h1>
+                <ul>
+                    <li><a href="#freewebfreames">webframes</a></li>
+                    <li><a href="#freewebfreames">webframes</a></li>
+                    <li><a href="#freewebfreames">webframes</a></li>
+                    <li><a href="#freewebfreames">webframes</a></li>
+                </ul>
+            <div id=""></div>
+            </div>
+        </div>
     </body>
 </html>
