All set for Template

--- a/DAY3 ASSIGNMENT/DAy4 assignment/tempalte1.html
+++ b/DAY3 ASSIGNMENT/DAy4 assignment/tempalte1.html
@@ -6,44 +6,81 @@
             <div id=""row1part1>
                 <div id="header" class="clear">
                     <div id="hgroup" class="clear">
-                        <h1><a href="#">Basic87</a></h1>
-                        <h2>The web designing application</h2>
+                        <h1><a href="#">APTOURISM<sub>estd1997</sub></a></h1>
+                        <h2>Travel with us to make memories</h2>
                     </div>
                     <div id="nav">
                     <ul>
-                        <li>TEST LINK1</li>
-                        <li>TEST LINK2</li>
-                        <li>TEST LINK3</li>
-                        <li>TEST LINK4</li>
+                        <li><a href="https://www.tripadvisor.in/Hotels-g12421911-East_Godavari_District_Andhra_Pradesh-Hotels.html" target="_blank">
+                            <b>PlacesToVisit</b></a></li>
+                        <li><a href="https://www.tripadvisor.in/Hotels-g12421911-East_Godavari_District_Andhra_Pradesh-Hotels.html" target="_blank"><b>HOTELS</b><a></li>
+                        <li><a href="https://www.tripadvisor.in/Hotels-g12421911-East_Godavari_District_Andhra_Pradesh-Hotels.html" target="_blank"><b>Availability</b></a></li>
+                        <li><a href="https://www.tripadvisor.in/Hotels-g12421911-East_Godavari_District_Andhra_Pradesh-Hotels.html" target="_blank"><b>Check Status</a></li>
                     </ul>
                     </div>
                 </div>
             </div>
         </div>
         <div id="row2" class="clear">
-            <div class="image1"><img src="./image1.gif" alt="image not displayed"><p>enter caption</p></div>
-            <div class="image1"> <img src="./image1.gif" alt="image not displayed"><p>enter caption</p></div>
-            <div class="image1"><img src="./image1.gif" alt="image not displayed"><p>enter caption</p></div>
-             <div class="image1 last" ><img src="./image1.gif" alt="image not displayed"><p>enter caption</p></div>
+            <div class="image1"><img src="./forest..jpg" alt="image not displayed" style=" height:296px;width:215px;"><p style="background-color: powderblue;color:saddlebrown"><b>FORESTS</b></p></div>
+            <div class="image1"> <img src="./beach.jpg" alt="image not displayed" style=" height:296px;width:215px;"><p style="background-color: powderblue;color:saddlebrown;"><b>BEACHES</b></p></div>
+            <div class="image1"><img src="./Hillstation - Copy.jpg" alt="image not displayed" style=" height:296px;width:215px;"><p style="background-color: powderblue;color:saddlebrown;"><b>HILLSTATION</b></p></div>
+             <div class="image1 last" ><img src="./charmin.jpg" alt="image not displayed" style=" height:296px;width:215px;"><p style="background-color: powderblue;color:saddlebrown;"><b>HISTORICPLACES</b></p></div>
             </div>
         <div id="row3">
-            <p>
-                Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
-                Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. 
-                Namjusto cras urna urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.
-            </p>
+            <p><b>
+                Tourism is the activities of people traveling to and staying in places outside their
+                usual environment for leisure, business or other purposes for not more than one 
+                consecutive year.Tourism is a dynamic and competitive industry that requires the ability
+                to adapt constantly toenjoyment are particularly the focus of tourism businesses.
+            </b></p>
         </div>
         <div id="row4">
             <div id="category">
-                <h1 style="color: black;">CATRGORIES</h1>
-                <ul>
-                    <li><a href="#freewebfreames">webframes</a></li>
-                    <li><a href="#freewebfreames">webframes</a></li>
-                    <li><a href="#freewebfreames">webframes</a></li>
-                    <li><a href="#freewebfreames">webframes</a></li>
+                <h1 style="color: black;text-align: center;">CATRGORIES</h1>
+                <ul style="padding-left:10px;">
+                    <li><a href="#freewebfreames">Airbnb Free at Airbnb</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
+                    <li><a href="#freewebfreames">some extra more links</a></li>
                 </ul>
-            <div id=""></div>
+            </div>
+            <div class="imageandtext">
+                <div id="imageandtext1">
+                     <img class="imgs" src="./tej.jpeg" alt="image not found" style=" height:150px;width:180px;">
+                     <div id="hgroup1">
+                        <h1 style="text-align: center;">CONTACT US</h1>
+                        <h4 style="padding-left: 4px;">Manager of the entire tourism and takes the lead of
+                        entire tourism.Contact him and he will give you the best memories. 
+                        </h4>
+                        <a href="#Readmore">Readmore>>></a>
+                        </div>
+                     
+                </div>
+                <div id=imageandtext2>
+                    <img class="imgs" src="./det.jpg" alt="image not found" style=" height:150px;width:180px;">
+                     <div id="hgroup1">
+                        <h1 style="text-align: center;">DETAILS</h1>
+                        <h4 style="padding: 4px;padding-left: 4px;">This is a W3C compliant free website template from OS Templates.
+                        For full terms of use of this template please read our website template licence. 
+                        </h4>
+                        <a href="#Readmore"><b>Readmore>>></b></a>
+                    </div>
+                </div>
             </div>
         </div>
+       <div id="row5">
+           <span style="float:left;color: aliceblue;padding:10px;padding-left: 100px;">Copyright © 2018 - All Rights Reserved - <a href="#Domain Name">Domain Name</a></span>
+           <span style="float:right;color: aliceblue;padding:10px;padding-right: 100px;">Template by-<a href="#OS Templates">OS Templates</a></span>
     </body>
 </html>
