--- a/DAY3 ASSIGNMENT/DAy4 assignment/templatesports.html
+++ b/DAY3 ASSIGNMENT/DAy4 assignment/templatesports.html
@@ -1,7 +1,7 @@
 <html>
     <title>TEMPLATE3</title>
     <head>
-        <link href="./style3.css" rel="stylesheet">
+        <link href="./sports.css" rel="stylesheet">
     </head>
     <body>
         <div id="block1">
