--- a/DAY3 ASSIGNMENT/DAy4 assignment/templatetourism.html
+++ b/DAY3 ASSIGNMENT/DAy4 assignment/templatetourism.html
@@ -1,6 +1,6 @@
 <html>
     <title>Template1</title>
-    <link href="./style.css" rel="stylesheet">
+    <link href="./tourism.css" rel="stylesheet">
     <body>
         <div id="row1">
             <div id=""row1part1>
