--- a/HTML/Template Practice/template Basic 87/index.html
+++ b/HTML/Template Practice/template Basic 87/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.cssr">
+    <link rel="stylesheet" href="./styles.css">
     
 </head>
 <body>
@@ -55,7 +55,7 @@
                             <figcaption>IMAGE CAPTION HERE</figcaption>
                         </figure>
                     </article>
-                    <article id="article4" class="last">
+                    <article id="article4">
                         <figure>
                             <img src="images/demo/215x315.gif" alt="">
                             <figcaption>IMAGE CAPTION HERE</figcaption>
