--- a/project1/project1.html
+++ b/project1/project1.html
@@ -4,29 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>basic88</title>
-    <link rel="stylesheet" href="./01.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="01.css">
 </head>
-<body>
-    <div class="wrapper row1">
-    <header id="header" class="clear"></header>
-    <div id="hgroup">
-    <h1>
-        <a href="#">basic 88</a>
-    </h1>
-    <h2>free html website templates</h2></div>
-    <nav>
-        <ul>
-            <li>link 1</li>
-            <li>link 2</li>
-            <li>link 3</li>
-            <li>link 4</li>
 
-        </ul>
-    </nav>
+<body>
+
+    <div class="wrapper row1" >
+        <header id="header" class="clear">
+            <div id="hgroup">
+                <h1><a href="#">basic 87</a></h1>
+                <h2> basic templates of html</h2>
+            </div>
+            <nav>
+                <li><a href="#">LINK</a> </li>
+                <li><a href="#">LINK</a> </li>
+                <li><a href="#">LINK</a> </li>
+                <li><a href="#">LINK</a> </li>
+                <li><a href="#">LINK</a> </li>
+            </nav>
+        </header>
+    </div>
+    <div class="wrapper row2">
+        <div id="container" class="clear"></div>
+        <div id="homepage"></div>
+    </div>
+    <div id="content"></div>
+    <aside id="right_column"></aside>
+
+
+
+
 
 </div>
-    <div class="wrapper row2"></div>
-    <div class="wrapper row2"></div>
+    <div class="wrapper row3"></div>
 </body>
+
+
 </html>
