--- a/HTML/Template Practice/template Basic 84/index.html
+++ b/HTML/Template Practice/template Basic 84/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basic-84</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <div class="wrapper row1">
         <header>
             <div id="title">
-                <h1><a href="#">Basic 84</a></h1>
+                <h1><a href="#">Basic 84 </a></h1>
                 <h2>Free HTML5 Website Temolate</h2>
             </div>
             <form action="#" >
