--- a/HTML/Template Practice/template Basic 85/index.html
+++ b/HTML/Template Practice/template Basic 85/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basic-85</title>
     <link rel="stylesheet" href="./styles.css">
     
 </head>
@@ -156,9 +156,10 @@
                     </article>
                 </section>
             </div>
-            <!-- ================================================================================================================= -->
         </div>
-         <!-- =======================================================footer================================================ -->
+        <!-- ================================================================================================================= -->
+        
+        <!-- =======================================================footer================================================ -->
          <div class="wrapper row3">
             <footer id="main_footer">
                 <p id="left_footer">Copyright © 2018 - All Rights Reserved - Domain Name</p>
