--- a/HTML/Template Practice/template Basic 87/index.html
+++ b/HTML/Template Practice/template Basic 87/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basic-87</title>
     <link rel="stylesheet" href="./styles.css">
     
 </head>
@@ -80,7 +80,7 @@
                                     <img src="./images/demo/180x150.gif" alt="180x150">
                                     <figcaption id="figcap1">
                                         <h2>INDONECTETUS FACILIS LEO NIBH</h2>
-                                        <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit free website templates.</p>
+                                        <p>This is a W3C compliant free website template from OS Templates. For full terms of use of this template please read our website template licence</p>
                                         <footer id="readmore">
                                             <a href="#">Read More >></a>
                                         </footer>
@@ -95,7 +95,7 @@
                                     <img src="./images/demo/180x150.gif" alt="180x150">
                                     <figcaption id="figcap2">
                                         <h2>INDONECTETUS FACILIS LEO NIBH</h2>
-                                        <p>This is a W3C compliant free website template from OS Templates. For full terms of use of this template please read our website template licence</p>
+                                        <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit free website templates.</p>
                                         <footer id="readmore">
                                             <a href="#">Read More >></a>
                                         </footer>
