--- a/HTML/Template Practice/template Basic 83/index.html
+++ b/HTML/Template Practice/template Basic 83/index.html
@@ -1,111 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      #header {
-        display: block;
-        width: 960px;
-        margin: 0 auto;
-      }
-      #header #hgroup {
-        float: left;
-        margin: 0 0 20px 0;
-      }
-      #header #hgroup h1 {
-        font-size: 36px;
-      }
-      body{
-        font-family: Georgia, "Times New Roman", Times, serif;
-
-      }
-      .row1, .row1 a {
-    color: rgb(192, 186, 182);
-    background-color: rgb(51, 51, 51);
-}
-#header #hgroup h2 {
-    font-size: 13px;
-}
-#header {
-    padding: 20px 0px;
-}
-
-#header nav {
-    display: block;
-    float: right;
-    color: rgb(192, 186, 182);
-    background-color: rgb(35, 35, 35);
-    margin: 10px 0px 0px;
-    padding: 20px 0px;
-}
-#header nav ul {
-    padding: 0px 20px;
-}
-#header nav li {
-    display: inline;
-    margin-right: 25px;
-    text-transform: uppercase;
-}
-#header{
-overflow: auto;
-
-}   
-a {
-    outline: none;
-    text-decoration: none;
-}
-#header #hgroup h1, #header #hgroup h2 {
-    font-weight: normal;
-    font-style: normal;
-    text-transform: none;
-}
-#container section {
-    display: block;
-    width: 100%;
-    margin: 0px 0px 30px;
-    padding: 0px;
-}
-#container {
-    padding: 30px 0px;
-}
-#header, #container, #footer, #copyright {
-    display: block;
-    width: 960px;
-    margin: 0px auto;
-}
-</style>
-  </head>
-  <body>
-    <div class="wrapper">
-      <div class="row1">
-        <header id="header">
-          <div id="hgroup">
-            <h1><a href="#">Basic 88</a></h1>
-            <h2>Free HTML5 Website Template</h2>
-          </div>
-          <nav>
-            <ul>
-              <li><a href="#">Text Link</a></li>
-              <li><a href="#">Text Link</a></li>
-              <li><a href="#">Text Link</a></li>
-              <li><a href="#">Text Link</a></li>
-              <li class="last"><a href="#">Text Link</a></li>
-            </ul>
-          </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic-83</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+<!-- ============================ Header with search box on right and navigator at bottom ============================ -->
+    <!-- ==================== Header Section ==================== -->
+    <div class="wrapper row1">
+        <header>
+            <div id="title">
+                <h1><a href="#">Basic 83 </a></h1>
+                <h2>Free HTML5 Website Temolate</h2>
+            </div>
+            <form action="#" >
+                <fieldset>
+                    <input type="text" name="text" id="searchbox" placeholder="Search Our Website...">
+                    <input type="submit" value="SUBMIT" id="submit">
+                </fieldset>
+            </form>
+            <nav>
+                <ul>
+                    <li><a href="#">Text link</a></li>
+                    <li><a href="#">Text link</a></li>
+                    <li><a href="#">Text link</a></li>
+                    <li><a href="#">Text link</a></li>
+                    <li class=".last"><a href="#">Text link</a></li>
+                </ul>
+            </nav>
         </header>
-      </div>
     </div>
-
+<!-- ================================================================================================================= -->
+<!-- =================================================== Container =================================================== -->
     <div class="wrapper row2">
-        <section id="slider"><a href="#"><img src="images/demo/960x360.gif" alt=""></a></section>
+        <div id="container">
+            <!-- ==================== Section 1 ==================== -->
+            <section id="section1">
+                <img src="./images/demo/960x280.gif" alt="">
+            </section>
 
-    </div>
-  </body>
+            <!-- ========== Home Page ============== -->
+            <div id="homepage">
+
+                <!-- ========== Section 2 ============== -->
+                <section id="section2">
+                    <article id="article1" class="article_row1">
+                        <figure>
+                            <img src="./images/demo/32x32.gif" alt="32x32">
+                        </figure>
+                        <strong>LORUM IPSUM DOLOR</strong>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <p class="readmore">
+                            <a href="#">Read More »</a>
+                        </p>
+                    </article>
+                    <article id="article2" class="article_row1">
+                        <figure>
+                            <img src="./images/demo/32x32.gif" alt="32x32">
+                        </figure>
+                        <strong>LORUM IPSUM DOLOR</strong>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <p class="readmore">
+                            <a href="#">Read More »</a>
+                        </p>
+                    </article>
+                    <article id="article3" class="article_row1">
+                        <figure>
+                            <img src="./images/demo/32x32.gif" alt="32x32">
+                        </figure>
+                        <strong>LORUM IPSUM DOLOR</strong>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <p class="readmore">
+                            <a href="#">Read More »</a>
+                        </p>
+                    </article>
+                    <article id="article4" class="article_row1 last">
+                        <figure>
+                            <img src="./images/demo/32x32.gif" alt="32x32">
+                        </figure>
+                        <strong>LORUM IPSUM DOLOR</strong>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <p class="readmore">
+                            <a href="#">Read More »</a>
+                        </p>
+                    </article>
+                </section>
+
+                <!-- ========== Section 3 ============== -->
+                <section id="section3">
+                    <article>
+                        <h2>
+                            LORUM IPSUM DOLOR
+                        </h2>
+                        <p>This is a W3C compliant free website template from OS Templates. For full terms of use of this template please read our website template licence.</p>
+                        <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit free website templates.</p>
+                        <p class="readmore">
+                            <a href="#">Read More »</a>
+                        </p>
+                    </article>
+                    <aside>
+                        <h2>
+                            LORUM IPSUM DOLOR
+                        </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper pellentesque. Quisque non luctus sem.</p>
+                        <p class="readmore">
+                            <a href="#">Read More »</a>
+                        </p>
+                    </aside>
+                </section>
+            </div>
+<!-- ================================================================================================================= -->
+ </body>
 </html>
