updated template 83 with pic and descriptions

--- a/HTML/Template Practice/template Basic 85/index.html
+++ b/HTML/Template Practice/template Basic 85/index.html
@@ -160,10 +160,10 @@
         <!-- ================================================================================================================= -->
         
         <!-- =======================================================footer================================================ -->
-         <div class="wrapper row3">
+        <div class="wrapper row3">
             <footer id="main_footer">
-                <p id="left_footer">Copyright © 2018 - All Rights Reserved - Domain Name</p>
-                <p id="right_footer">Template by OS Templates</p>
+                <p id="left_footer">Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
+                <p id="right_footer">Template cloned from OS-Templates by Ervin </p>
             </footer>
         </div>
     </body>
