--- a/HTML/Template Practice/template Basic 84/index.html
+++ b/HTML/Template Practice/template Basic 84/index.html
@@ -116,8 +116,8 @@
 
     <div class="wrapper row3">
         <footer id="main_footer">
-            <p id="left_footer">Copyright © 2018 - All Rights Reserved - Domain Name</p>
-            <p id="right_footer">Template by OS Templates</p>
+            <p id="left_footer">Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
+            <p id="right_footer">Template cloned from OS-Templates by Ervin </p>
         </footer>
     </div>
 </body>
