template 84 completed with images and description

--- a/HTML/Template Practice/template Basic 84/index.html
+++ b/HTML/Template Practice/template Basic 84/index.html
@@ -13,8 +13,8 @@
     <div class="wrapper row1">
         <header>
             <div id="title">
-                <h1><a href="#">Basic 84 </a></h1>
-                <h2>Free HTML5 Website Temolate</h2>
+                <h1><a href="#">Indian Cricket </a></h1>
+                <h2>Bleed Blue</h2>
             </div>
             <form action="#" >
                 <fieldset>
@@ -24,11 +24,11 @@
             </form>
             <nav>
                 <ul>
-                    <li><a href="#">Text link</a></li>
-                    <li><a href="#">Text link</a></li>
-                    <li><a href="#">Text link</a></li>
-                    <li><a href="#">Text link</a></li>
-                    <li class=".last"><a href="#">Text link</a></li>
+                    <li><a href="#title">Home</a></li>
+                    <li><a href="#section1">Cover Image</a></li>
+                    <li><a href="#section2">Description</a></li>
+                    <li><a href="#section3">Forms</a></li>
+                    <li class=".last"><a href="#section4">Latest from Gallery</a></li>
                 </ul>
             </nav>
         </header>
@@ -40,42 +40,42 @@
         <div id="container">
             <!-- ==================== Section 1 ==================== -->
             <section id="section1">
-                <img src="./images/demo/960x360.gif" alt="">
+                <img src="./images/demo/960x360" alt="Indian cricket team">
             </section>
             <!-- ==================== Section 2 ==================== -->
             <section id="section2">
-                <p>VESTIBULUMACCUMSAN EGESTIBULUM EU JUSTO CONVALLIS AUGUE ESTAS AENEAN ELIT INTESQUE SED. FACILISPEDE ESTIBULUM NULLA ORNA NISL VELIT ELIT AC ALIQUAT NON TINCIDUNT NAMJUSTO CRAS URNA.</p>
+                <p>The India men's national cricket team, also known as Team India and Men in Blue. The India women's national cricket team, nicknamed the Women in Blue, represents the country of India in international women's cricket.</p>
             </section>
             <div id="homepage">
                 <!-- ======================================== -->
                 <!-- ======================================== -->
                 <!-- ======================================== -->
-                <h1>Services We Offer</h1>
+                <h1>Forms of Cricket</h1>
                 <!-- ==================== Section 3 ==================== -->
                 <section id="section3">
                     <article class="article" id="article1">
                         <figure>
-                            <img src="./images/demo/32x32.gif" alt="32x32">
+                            <img src="./images/demo/32x32(1)" alt="32x32">
                         </figure>
-                        <strong>LORUM IPSUM DOLOR</strong>
-                        <p>This is a W3C compliant free website template from OS Templates. For full terms of use of this template please read our website template licence.</p>
-                        <p class="readmore"><a href="#">Read More >></a></p>
+                        <strong>Test Cricket</strong>
+                        <p>Test cricket is the form of the sport of cricket with the longest match duration and is considered the game's highest standard.</p>
+                        <p class="readmore"><a href="https://en.wikipedia.org/wiki/Test_cricket#Test_status" target="_blank">Read More >></a></p>
                     </article>
                     <article class="article" id="article2">
                         <figure>
-                            <img src="./images/demo/32x32.gif" alt="32x32">
+                            <img src="./images/demo/32x32(2)" alt="32x32">
                         </figure>
-                        <strong>LORUM IPSUM DOLOR</strong>
-                        <p>This is a W3C compliant free website template from OS Templates. For full terms of use of this template please read our website template licence.</p>
-                        <p class="readmore"><a href="#">Read More >></a></p>
+                        <strong>One Day International </strong>
+                        <p>A ODI is a form of limited overs cricket with a fixed number of overs, currently 50, with the game lasting up to 9 hours.</p>
+                        <p class="readmore"><a href="https://en.wikipedia.org/wiki/One_Day_International" target="_blank">Read More >></a></p>
                     </article>
                     <article class="article" id="article3">
                         <figure>
-                            <img src="./images/demo/32x32.gif" alt="32x32">
+                            <img src="./images/demo/32x32(3)" alt="32x32">
                         </figure>
-                        <strong>LORUM IPSUM DOLOR</strong>
-                        <p>This is a W3C compliant free website template from OS Templates. For full terms of use of this template please read our website template licence.</p>
-                        <p class="readmore"><a href="#">Read More >></a></p>
+                        <strong>Twenty20</strong>
+                        <p>T20 is a shortened game format of cricket with restricted to a maximum of 20 overs. </p>
+                        <p class="readmore"><a href="https://en.wikipedia.org/wiki/Twenty20" target="_blank">Read More >></a></p>
                     </article>
                 </section>
                 <!-- ======================================== -->
@@ -86,26 +86,26 @@
                 <section id="section4">
                     <article id="article1">
                         <figure>
-                            <img src="images/demo/215x315.gif" alt="">
-                            <figcaption>IMAGE CAPTION HERE</figcaption>
+                            <img src="images/demo/215x315(1)" alt="">
+                            <figcaption>smriti mandana</figcaption>
                         </figure>
                     </article>
                     <article id="article2">
                         <figure>
-                            <img src="images/demo/215x315.gif" alt="">
-                            <figcaption>IMAGE CAPTION HERE</figcaption>
+                            <img src="images/demo/215x315(2)" alt="">
+                            <figcaption>Mitali Raj</figcaption>
                         </figure>
                     </article>
                     <article id="article3">
                         <figure>
-                            <img src="images/demo/215x315.gif" alt="">
-                            <figcaption>IMAGE CAPTION HERE</figcaption>
+                            <img src="images/demo/215x315(3)" alt="">
+                            <figcaption>MS Dhoni</figcaption>
                         </figure>
                     </article>
                     <article id="article4">
                         <figure>
-                            <img src="images/demo/215x315.gif" alt="">
-                            <figcaption>IMAGE CAPTION HERE</figcaption>
+                            <img src="images/demo/215x315(4)" alt="">
+                            <figcaption>Virat Kohli</figcaption>
                         </figure>
                     </article>
                 </section>
@@ -116,7 +116,7 @@
 
     <div class="wrapper row3">
         <footer id="main_footer">
-            <p id="left_footer">Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
+            <p id="left_footer">Copyright © 2021 - All Rights Reserved - ScoreBuddy</p>
             <p id="right_footer">Template cloned from OS-Templates by Ervin </p>
         </footer>
     </div>
