--- a/HTML/Template Practice/template Basic 85/index.html
+++ b/HTML/Template Practice/template Basic 85/index.html
@@ -14,16 +14,16 @@
     <div class="wrapper row1">
         <header>
             <div id="title">
-                <h1><a href="#">Basic 85</a></h1>
-                <h2>Free HTML5 Website Template</h2>
+                <h1><a href="#">Indian Premier League</a></h1>
+                <h2>Twenty20 cricket league</h2>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li class="last"><a href="#">Text Link</a></li>
+                    <li><a href="#title">Home</a></li>
+                    <li><a href="#section1">About</a></li>
+                    <li><a href="#section2">Images</a></li>
+                    <li><a href="#section4">Teams</a></li>
+                    <li class="last"><a href="#main_footer">Footer</a></li>
                 </ul>
                 
             </nav>
@@ -35,7 +35,7 @@
         <div id="container">
             <!-- ========== Section 1 ============== -->
             <section id="section1">
-                <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.</p>
+                <p>The Indian Premier League (IPL) is a professional Twenty20 cricket league, contested by eight teams based out of eight Indian cities. founded by the Board of Control for Cricket in India (BCCI) in 2007. It is usually held between March and May of every year.</p>
             </section>
             <!-- ========== Home Page ============== -->
             <div id="homepage">
@@ -46,21 +46,21 @@
                         <figure>
                             <ul>
                                 <li>
-                                        <img src="./images/demo/215x150.gif" alt="215x150">
+                                        <img src="./images/demo/215x150(4)" alt="215x150">
                                 </li>
                                 <li>
-                                        <img src="./images/demo/215x150.gif" alt="215x150">
+                                        <img src="./images/demo/215x150(2)" alt="215x150">
                                 </li>
                                 <li>
-                                        <img src="./images/demo/215x150.gif" alt="215x150">
+                                        <img src="./images/demo/215x150(3)" alt="215x150">
                                 </li>
                                 <li id="last">
-                                        <img src="./images/demo/215x150.gif" alt="215x150">
+                                        <img src="./images/demo/215x150(1)" alt="215x150">
                                 </li>
                             </ul>
                         </figure>
                         <figcaption>
-                            <p><a href="#">View all our recent works here »</a></p>
+                            <p><a href="https://www.iplt20.com/" target="_blank">View all our recent works for ipl here »</a></p>
                         </figcaption>
                     </article>
                 </section>
@@ -69,42 +69,42 @@
                 <section id="section3">
                     <article id="article1" class="article_row1">
                         <figure>
-                            <img src="./images/demo/32x32.gif" alt="32x32">
+                            <img src="./images/demo/32x32(1)" alt="csk">
                         </figure>
-                        <strong>LORUM IPSUM DOLOR</strong>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <strong>CSK</strong>
+                        <p>The Chennai Super Kings (CSK) is a franchise cricket team based in Chennai, Tamil Nadu. Founded in 2008</p>
                         <p class="readmore">
-                            <a href="#">Read More »</a>
+                            <a href="https://en.wikipedia.org/wiki/Chennai_Super_Kings" target="_blank">Read More »</a>
                         </p>
                     </article>
                     <article id="article2" class="article_row1">
                         <figure>
-                            <img src="./images/demo/32x32.gif" alt="32x32">
+                            <img src="./images/demo/32x32(2)" alt="mi">
                         </figure>
-                        <strong>LORUM IPSUM DOLOR</strong>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <strong>MI</strong>
+                        <p>The Mumbai Indians (MI) are a franchise cricket team based in Mumbai, Maharashtra. Founded in 2008</p>
                         <p class="readmore">
-                            <a href="#">Read More »</a>
+                            <a href="https://en.wikipedia.org/wiki/Mumbai_Indians" target="_blank">Read More »</a>
                         </p>
                     </article>
                     <article id="article3" class="article_row1">
                         <figure>
-                            <img src="./images/demo/32x32.gif" alt="32x32">
+                            <img src="./images/demo/32x32(3)" alt="rcb">
                         </figure>
-                        <strong>LORUM IPSUM DOLOR</strong>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <strong>RCB</strong>
+                        <p>The Royal Challengers Bangalore (RCB) are a franchise cricket team based in Bangalore, Karnataka. It was founded in 2008 </p>
                         <p class="readmore">
-                            <a href="#">Read More »</a>
+                            <a href="https://en.wikipedia.org/wiki/Royal_Challengers_Bangalore" target="_blank">Read More »</a>
                         </p>
                     </article>
                     <article id="article4" class="article_row1 last">
                         <figure>
-                            <img src="./images/demo/32x32.gif" alt="32x32">
+                            <img src="./images/demo/32x32(4)" alt="32x32">
                         </figure>
-                        <strong>LORUM IPSUM DOLOR</strong>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <strong>SRH</strong>
+                        <p>The Sunrisers Hyderabad (SRH) are a franchise cricket team based in Hyderabad, Telangana, India. Founded in 2012 </p>
                         <p class="readmore">
-                            <a href="#">Read More »</a>
+                            <a href="https://en.wikipedia.org/wiki/Sunrisers_Hyderabad" target="_blank">Read More »</a>
                         </p>
                     </article>
 
@@ -116,42 +116,42 @@
 
                     <article id="article5" class="article_row2">
                         <figure>
-                            <img src="./images/demo/32x32.gif" alt="32x32">
+                            <img src="./images/demo/32x32(5)" alt="32x32">
                         </figure>
-                        <strong>LORUM IPSUM DOLOR</strong>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <strong>DC</strong>
+                        <p>The Delhi Capitals (DC) are a franchise cricket team based out of Delhi in the Indian Premier League (IPL). Founded in 2008 .</p>
                         <p class="readmore">
-                            <a href="#">Read More »</a>
+                            <a href="https://en.wikipedia.org/wiki/Delhi_Capitals" target="_blank">Read More »</a>
                         </p>
                     </article>
                     <article id="article6" class="article_row1">
                         <figure>
-                            <img src="./images/demo/32x32.gif" alt="32x32">
+                            <img src="./images/demo/32x32(6)" alt="32x32">
                         </figure>
-                        <strong>LORUM IPSUM DOLOR</strong>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <strong>PBKS</strong>
+                        <p>The Punjab Kings (PBKS) are a franchise cricket team based in Mohali, Punjab India. Established in 2008.</p>
                         <p class="readmore">
-                            <a href="#">Read More »</a>
+                            <a href="https://en.wikipedia.org/wiki/Punjab_Kings" target="_blank">Read More »</a>
                         </p>
                     </article>
                     <article id="article7" class="article_row1">
                         <figure>
-                            <img src="./images/demo/32x32.gif" alt="32x32">
+                            <img src="./images/demo/32x32(7)" alt="32x32">
                         </figure>
-                        <strong>LORUM IPSUM DOLOR</strong>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <strong>RR</strong>
+                        <p>The Rajasthan Royals (RR) are a franchise cricket team based in Jaipur, Rajasthan. Founded in 2008</p>
                         <p class="readmore">
-                            <a href="#">Read More »</a>
+                            <a href="https://en.wikipedia.org/wiki/Rajasthan_Royals" target="_blank">Read More »</a>
                         </p>
                     </article>
                     <article id="article8" class="article_row1 last">
                         <figure>
-                            <img src="./images/demo/32x32.gif" alt="32x32">
+                            <img src="./images/demo/32x32(8)" alt="32x32">
                         </figure>
-                        <strong>LORUM IPSUM DOLOR</strong>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+                        <strong>KKR</strong>
+                        <p>The Kolkata Knight Riders (KKR) are a franchise cricket team representing the city of Kolkata in the Indian Premier League.</p>
                         <p class="readmore">
-                            <a href="#">Read More »</a>
+                            <a href="https://en.wikipedia.org/wiki/Kolkata_Knight_Riders" target="_blank">Read More »</a>
                         </p>
                     </article>
                 </section>
@@ -162,7 +162,7 @@
         <!-- =======================================================footer================================================ -->
         <div class="wrapper row3">
             <footer id="main_footer">
-                <p id="left_footer">Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
+                <p id="left_footer">Copyright © 2021 - All Rights Reserved - IPL</p>
                 <p id="right_footer">Template cloned from OS-Templates by Ervin </p>
             </footer>
         </div>
