added small changes

--- a/HTML/Template Practice/template Basic 84/index.html
+++ b/HTML/Template Practice/template Basic 84/index.html
@@ -44,7 +44,7 @@
             </section>
             <!-- ==================== Section 2 ==================== -->
             <section id="section2">
-                <p>The India men's national cricket team, also known as Team India and Men in Blue. The India women's national cricket team, nicknamed the Women in Blue, represents the country of India in international women's cricket.</p>
+                <p>The India men's national cricket team, also known as Team India and Men in Blue. The India women's national cricket team, nicknamed the Women in Blue, represents the country of India in international cricket.</p>
             </section>
             <div id="homepage">
                 <!-- ======================================== -->
