--- a/HTML/Template Practice/template Basic 83/index.html
+++ b/HTML/Template Practice/template Basic 83/index.html
@@ -13,8 +13,8 @@
     <div class="wrapper row1">
         <header>
             <div id="title">
-                <h1><a href="#">Dead Pool</a></h1>
-                <h2>Maximum Effort</h2>
+                <h1><a href="#"> <span style="color:#bb1b3b">Dead Pool</a></h1>
+                <h2><span style="color: #1d1d2a">Maximum Effort</span></h2>
             </div>
             <form action="#" >
                 <fieldset>
