--- a/HTML/Template Practice/template Basic 84/index.html
+++ b/HTML/Template Practice/template Basic 84/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper row1">
         <header>
             <div id="title">
-                <h1><a href="#">Indian Cricket </a></h1>
+                <h1><a href="#"> <span style="color:#fc813b">Indian Cricket </span></a></h1>
                 <h2>Bleed Blue</h2>
             </div>
             <form action="#" >
