--- a/HTML/template1/index.html
+++ b/HTML/template1/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>template1</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="styles/style.css" type="text/css">
+<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
 <div class="box row1">
@@ -32,29 +32,29 @@
 </div>
 <div class="box row2">
   <div id="container" class="clear">
-    <section id="slider"><a href="#"><img src="images/demo/i.gif" alt=""></a></section>
+    <section id="slider"><a href="#"><img src="images/i.gif" alt=""></a></section>
     <div id="homepage">
       <section id="services" class="clear">
         <article class="one_quarter">
-          <figure><img src="images/demo/image1.jpeg" width="32" height="32" alt=""></figure>
+          <figure><img src="images/image1.jpeg" width="32" height="32" alt=""></figure>
           <strong>Lorum ipsum dolor</strong>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
         <article class="one_quarter">
-          <figure><img src="images/demo/image2.jpeg" width="32" height="32" alt=""></figure>
+          <figure><img src="images/image2.jpeg" width="32" height="32" alt=""></figure>
           <strong>Lorum ipsum dolor</strong>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
         <article class="one_quarter">
-          <figure><img src="images/demo/image3.jpeg" width="32" height="32" alt=""></figure>
+          <figure><img src="images/image3.jpeg" width="32" height="32" alt=""></figure>
           <strong>Lorum ipsum dolor</strong>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
         <article class="one_quarter lastbox">
-          <figure><img src="images/demo/image4.jpeg" width="32" height="32" alt=""></figure>
+          <figure><img src="images/image4.jpeg" width="32" height="32" alt=""></figure>
           <strong>Lorum ipsum dolor</strong>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
           <p class="more"><a href="#">Read More &raquo;</a></p>
