--- a/HTML/frame3.html
+++ b/HTML/frame3.html
@@ -9,7 +9,7 @@
         #parent{
             background: orange;
             padding: 2px;
-            
+            position:absolute;
             top:10px;
         }
         #main{
