--- a/HTML/css/s.html
+++ b/HTML/css/s.html
@@ -19,6 +19,7 @@
         background: lightgreen;
         height: 200px;
         margin: 20px auto;
+        
       }
       #box3{
         width: 400px;
@@ -26,12 +27,13 @@
         height: 200px;
         margin: 20px auto; 
         z-index: 3px;
+        position: absolute;
       }
     </style>
   </head>
   <body>
-    <div id="parent">
-      <div id="child">
+    <div id="box1">
+      <div id="box2">
         <h2>Hello World From Z Index Topic</h2>
       </div>
     </div>
