--- a/CSS/sample2_Display.html
+++ b/CSS/sample2_Display.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img:hover{
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <img src="./images/dramatic-landscape-7.jpg" alt="" style="width: 500px;height: 300px;">
